# opdater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
opdater/: Cargo.toml
opdater/src/: lib.rs
opdater_derive/: Cargo.toml
opdater_derive/src/: lib.rs
opdater_test/: Cargo.toml
opdater_test/src/: lib.rs
