[package]
name = "opdater"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
reporsitory = { workspace = true }
include = ["src/**/*.rs"]
documentation = "https://docs.rs/opdater"
description = "Small trait based approch to struct updates"
publish = true

[dependencies]
opdater_derive = { workspace = true }
